# DynamoUI

./: .env  .env.example  .gitignore  01-backend-implementation-plan.md  02-v2-misalignments.md  README.md  adapters.registry.yaml  alembic.ini  business_context.yaml  canvas_lld.md  claude-llm-metering.md  claude.md  instruct  pyproject.toml  widgets.yaml
alembic/: env.py
alembic/versions/: 20260406_001_create_metering_tables.py  20260407_002_create_auth_tables.py  20260408_003_create_tenant_connections.py  20260408_004_create_tenant_scaffold_jobs.py  20260408_005_create_tenant_registry.py  20260417_006_create_v2_tables.py  20260425_007_create_canvas_sessions.py
backend/: main.py
backend/adapters/: base.py  claude-adapters.md  cloud_base.py  cloud_registry.py  kinds.py  registry.py
backend/adapters/api/: rest_router.py
backend/auth/: __init__.py  claude-auth.md  config.py  dao.py  security.py  service.py
backend/canvas/: __init__.py  dao.py  generator.py
backend/crypto/: __init__.py  claude-crypto.md  config.py  envelope.py
backend/metering/: __init__.py  claude-metering.md  context.py  cost.py  provider_decorator.py  service.py
backend/pattern_cache/: claude-pattern_cache.md  claude-skill_registry.md
backend/personalisation/: __init__.py
backend/query_engine/: __init__.py  pipeline.py  provenance.py
backend/scheduling/: __init__.py  nl_parser.py
backend/sharing/: __init__.py
backend/tenants/: __init__.py  claude-tenants.md
dynamoui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/: Album.patterns.yaml  Album.skill.yaml  Artist.patterns.yaml  Artist.skill.yaml  Customer.patterns.yaml  Customer.skill.yaml  Employee.patterns.yaml  Employee.skill.yaml  Genre.patterns.yaml  Genre.skill.yaml  Invoice.patterns.yaml  Invoice.skill.yaml  InvoiceLine.patterns.yaml  InvoiceLine.skill.yaml  MediaType.patterns.yaml  MediaType.skill.yaml  Playlist.patterns.yaml  Playlist.skill.yaml  PlaylistTrack.patterns.yaml  PlaylistTrack.skill.yaml  README.md  Track.patterns.yaml  Track.skill.yaml  invoice_line.patterns.yaml  invoice_line.skill.yaml  media_type.patterns.yaml  media_type.skill.yaml  playlist_track.patterns.yaml  playlist_track.skill.yaml  widgets.yaml
tests/: conftest.py  test_adapters.py  test_api.py  test_auth_security.py  test_auth_service.py  test_canvas_contract.py  test_canvas_synthesis.py  test_cli.py  test_cloud_adapters.py  test_crypto_envelope.py  test_formatters.py  test_loader.py  test_models.py  test_pattern_cache.py  test_query_translator.py  test_scaffolder.py  test_settings.py  test_tenant_connections.py  test_tenant_registry_cache.py  test_tenant_registry_service.py  test_tenant_scaffold.py  test_validator.py
(+124 files in other folders)
